<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >
            <RelativeLayout
                android:id="@+id/wallpaperimage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/backdefault"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center" >

                <victor.doctorswall.components.CircularImageView
                    android:id="@+id/contacts_ivChooseProPic"
                    android:layout_width="@dimen/menu_img_width"
                    android:layout_height="@dimen/menu_img_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/default_user_icon"
                    app:border_color="@color/white"
                    app:border_width="2dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal" >

                    <victor.doctorswall.components.MyFontTextView
                        android:id="@+id/spAddressee"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/activity_margin_register"
                        android:layout_weight="0.4"
                        android:text="Dr."
                        android:background="@drawable/spinner_ab_default_holo_light"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <victor.doctorswall.components.MyFontTextView
                        android:id="@+id/etSpecialties"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="Degrees"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />
                </LinearLayout>

                <victor.doctorswall.components.MyFontEdittextView
                    android:id="@+id/etProfStmnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/feedback_margin_two"
                    android:layout_marginRight="@dimen/feedback_margin_two"
                    android:layout_marginTop="@dimen/feedback_margin_three"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="Job Description"
                    android:lines="4"
                    android:maxLines="100"
                    android:minLines="2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_app_gray" />


                <victor.doctorswall.components.MyFontEdittextView
                    android:id="@+id/etFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_fname_caps"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark" />


                <victor.doctorswall.components.MyFontEdittextView
                    android:id="@+id/etLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_lname_caps"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark" />

                <victor.doctorswall.components.MyFontEdittextView
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark" />

                <victor.doctorswall.components.MyFontEdittextView
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_passs"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal" >

                    <victor.doctorswall.components.MyFontTextView
                        android:id="@+id/spCCode"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/activity_margin_register"
                        android:layout_weight="0.4"
                        android:background="@drawable/spinner_ab_default_holo_light"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />

                    <victor.doctorswall.components.MyFontEdittextView
                        android:id="@+id/etNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_number"
                        android:inputType="numberSigned"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/color_text_dark" />
                </LinearLayout>

                <victor.doctorswall.components.MyFontEdittextView
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_address"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_text_dark"
                    />






            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <victor.doctorswall.components.MyFontButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/btn_pickup"
        android:gravity="center"
        android:text="@string/text_next"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

</LinearLayout>